--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,11 @@ body {
 header {
   padding: 16px 24px 16px 24px;
 }
-
+header .container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
 .logo {
   font-size: 1.5rem;
@@ -18,7 +22,7 @@ header {
   height: 32px;
 
 }
-.container .learn, .grid, .guest, .fisma {
+.container .learn, .guest, .fisma {
   background-color: #edf4ff;
 }
 
@@ -60,46 +64,63 @@ a {
 .button {
   background-color:  #307af2;
   text-align: center;
-  display: block;
-  padding: 16px 0;
+  display: inline-block;
+  padding: 20px 60px;
   border-radius: 8px;
+  font-size: 20px;
+  margin: 4px 12px;
 }
 
 .button a {
   color: white;
 }
-.button span:hover {
-  color: #1f4f9e
+.button a:hover {
+  color: #1f4f9e;
 }
 
 /* Start Learning Section */
 #grid .courses img{
+  display: block;
+  align-items: center;
   height: auto;
   flex-wrap: wrap;
+  padding-bottom: 16px;
+}
+#grid .courses{
+  background-color: #edf4ff;
 }
 
-.course {
+.grid-container {
+  display:inline-grid;
+  grid-template-columns: auto auto auto;
+  background-color: #edf4ff;
+  grid-gap: 32px;
+}
+
+.grid-item {
   background-color: white;
-  display: flex;
-  flex-direction: column;
-  width: 32%
-  margin-bottom: 32px;
+  display: grid;
+
 }
 
 /* Footer */
 
 footer {
-  border-top: 2px;
-  color: #edf4ff
+  border-top: 2px solid #edf4ff;
   padding-top: 16px;
+  padding-left: 24px;
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-footer nav {
+footer nav a {
   color: black
 }
 footer ul li {
   display: inline-block;
   align-items: flex-end;
-  padding-right: 16px;
+  padding-right: 24px;
   font-family: 'Oxygen', sans-serif;
 }
