--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,14 +20,26 @@ header .container {
   color: #307af2;
   padding: 32px;
   height: 32px;
-
+  display: inline-flex;
+  text-align: left;
 }
+
+.logo h1 {
+  font-size: 32px;
+}
+
+.logo h1 span{
+  color: black;
+}
+
 .container .learn, .guest, .fisma {
-  background-color: #edf4ff;
+  background-color: #e1e2f7;
 }
 
 a {
   color: #307af2;
+  text-decoration: none;
+  font-size: 1.5rem;
 }
 .desktop ul li{
   display: inline-block;
@@ -41,12 +53,14 @@ a {
 .banner img {
   display: flex;
   width: 60%;
+  height: auto;
   padding: 32px 24px 32px 24px;
 
 }
 
 .right-text {
   display: inline-block;
+
 }
 .right-text h1 {
   font-family: Oxygen, sans-serif;
@@ -78,6 +92,50 @@ a {
   color: #1f4f9e;
 }
 
+/* Info Section */
+
+.info img {
+  display: flex;
+  width: 60%;
+  height: auto;
+  padding: 32px 24px 32px 24px;
+}
+
+.info-right {
+  display: inline-block;
+  justify-content: flex-end;
+  align-content: flex-end;
+  width: 40%;
+}
+
+.orientation img {
+  height: auto;
+  width: 35%;
+}
+
+.info-campus img {
+  height: auto;
+  width: 35%;
+}
+
+.guest-image img {
+  height: auto;
+  width: 35%;
+}
+
+.info-right h4, h5 {
+  width: 65%;
+}
+
+.info-right h4 {
+  font-size: 1.5rem;
+  line-height: 3;
+}
+
+.info-right a {
+  font-size: 1rem;
+  line-height: 3;
+}
 /* Start Learning Section */
 #grid .courses img{
   display: block;
@@ -87,26 +145,38 @@ a {
   padding-bottom: 16px;
 }
 #grid .courses{
-  background-color: #edf4ff;
+  background-color: #e1e2f7;;
 }
 
-.grid-container {
-  display:inline-grid;
-  grid-template-columns: auto auto auto;
-  background-color: #edf4ff;
-  grid-gap: 32px;
+#grid h1 {
+  background-color: #e1e2f7;;
 }
 
-.grid-item {
+ h1 {
+  color: #307af2;
+  font-size: 2.5rem;
+  display: block;
+  justify-content: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+/* Thesis Section */
+
+
+
+#thesis h1 {
   background-color: white;
-  display: grid;
+}
 
+#thesis h3 {
+  font-size: 1.5rem;
+  line-height: 3;
 }
 
 /* Footer */
 
 footer {
-  border-top: 2px solid #edf4ff;
+  border-top: 2px solid #e1e2f7;;
   padding-top: 16px;
   padding-left: 24px;
   padding-bottom: 30px;
