--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,10 +79,10 @@ a {
   background-color:  #307af2;
   text-align: center;
   display: inline-block;
-  padding: 20px 60px;
+  padding: 12px 80px;
   border-radius: 8px;
   font-size: 20px;
-  margin: 4px 12px;
+  margin: 32px 24px;
 }
 
 .button a {
@@ -137,28 +137,68 @@ a {
   line-height: 3;
 }
 /* Start Learning Section */
-#grid .courses img{
-  display: block;
+#grid {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e1e2f7;
+}
+
+#grid .container .courses {
+  display: inline-block;
   align-items: center;
   height: auto;
   flex-wrap: wrap;
   padding-bottom: 16px;
-}
-#grid .courses{
-  background-color: #e1e2f7;;
-}
-
-#grid h1 {
-  background-color: #e1e2f7;;
+  margin-left: 72px;
+  margin-right: 72px;
 }
 
  h1 {
   color: #307af2;
   font-size: 2.5rem;
   display: block;
-  justify-content: center;
+  text-align:center;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+
+#grid .course {
+  background-color: white;
+  display:inline-flex;
+  flex-direction: column;
+  margin: 32px;
+  width: 500px;
+  padding-bottom: 24px;
+}
+
+.course h4 {
+  color: #307af2;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 16px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  line-height: 2;
+}
+
+.course span {
+  font-size: 1.5rem;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  line-height: 3;
+}
+
+.course p {
+  font-size: 1.5rem;
+  line-height: normal;
+  padding-left: 16px;
+}
+
+.course img {
+  width: 100%;
+  height: auto;
 }
 /* Thesis Section */
 
