--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,10 +44,6 @@ header .container {
   color: black;
 }
 
-.container .guest, .fisma {
-  background-color: #e1e2f7;
-}
-
 .desktop a {
   color: #307af2;
   text-decoration: none;
@@ -114,11 +110,10 @@ header .container {
 .button {
   background-color:  #307af2;
   text-align: center;
-  display: inline-block;
-  padding: 12px 80px;
+  padding: 0.8rem 5rem;
   border-radius: 8px;
-  font-size: 20px;
-  margin: 32px 24px;
+  font-size: 1.4rem;
+  margin: 2rem 1.5rem;
 }
 
 .button a {
@@ -129,6 +124,7 @@ header .container {
 }
 
 /* Info Section */
+
 .info-section {
   display: flex;
   flex-direction: row;
@@ -140,27 +136,23 @@ header .container {
   display: flex;
   width: 60%;
   height: auto;
-  padding: 32px 24px 32px 24px;
+  padding: 1.5rem;
+}
+.info-section h1, p, h6 {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  padding-bottom: 2rem;
 }
 
 .info-right {
   display: flex;
   flex-direction: column;
-  align-content: flex-end;
+  align-content: flex-start;
   width: 40%;
 }
 
-.orientation img {
-  height: auto;
-  width: 35%;
-}
-
-.info-campus img {
-  height: auto;
-  width: 35%;
-}
-
-.guest-image img {
+.info-right img {
   height: auto;
   width: 35%;
 }
@@ -177,9 +169,15 @@ header .container {
 .info-right a {
   font-size: 1rem;
   line-height: 3;
+  text-decoration: none;
+  color: #307af2;
 }
 .info-right a:hover {
   color: #1f4f9e;
+}
+
+.special-guest {
+  background-color: #e1e2f7;
 }
 /* Start Learning Section */
 #grid {
@@ -245,8 +243,9 @@ header .container {
   width: 100%;
   height: auto;
 }
-/* Thesis Section */
 
+
+/* Thesis Section */
 
 .thesis-container {
   background-color: white;
@@ -260,6 +259,14 @@ header .container {
   line-height: 3;
 }
 
+.video-container {
+  display: flex;
+  width: auto;
+  height: auto;
+  padding: 1.5rem;
+}
+
+
 .video-info {
   flex-wrap: wrap;
 }
@@ -268,6 +275,10 @@ header .container {
     flex-direction: column;
     align-content: flex-end;
     width: 40%;
+}
+
+.fisma {
+  background-color: #e1e2f7;
 }
 
 /* Footer */
