--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -146,7 +146,7 @@ header .container {
 }
 
 .info-right {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-content: flex-start;
   width: 40%;
@@ -265,11 +265,6 @@ header .container {
   height: auto;
   padding: 1.5rem;
 }
-
-
-.video-info {
-  flex-wrap: wrap;
-}
 .rightside {
     display: flex;
     flex-direction: column;
@@ -303,3 +298,89 @@ footer ul li {
   padding-right: 24px;
   font-family: 'Oxygen', sans-serif;
 }
+
+
+/* Tablet Mobile */
+
+@media only screen and (max-width: 1024px;) {
+  .desktopdisplay: none;
+  }
+
+  .mobilenav {
+    display: flex;
+}
+
+  .mobilenav img:first-child {
+    display: none;
+}
+
+  .mobilenav img {
+    padding-right: 2.5rem;
+  }
+
+  .course-description {
+    padding-bottom: 1.5rem;
+  }
+
+}
+
+/* mobile */
+
+@media only screen and (max-width: 760px) {
+  .container {
+    margin: 0;
+  }
+
+  .logo {
+    display: none;
+  }
+
+
+  .mobilenav img {
+    height: 2.5rem;
+  }
+
+  .mobilenav img:first-child {
+    display: flex;
+  }
+
+  .mobilenav {
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .banner .container {
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .banner-image {
+   width: 100%;
+   padding: 0;
+ }
+ .banner-right {
+     padding-left: 1rem;
+   }
+
+   .banner-right h1 {
+     padding-top: 2rem;
+     padding-bottom: 2rem;
+   }
+
+   .banner-right h4 {
+     padding-bottom: 1.5rem;
+   }
+
+  button {
+    margin-bottom: 2rem;
+    width: 100%;
+  }
+
+  .desktop-image {
+    display: none;
+  }
+
+  .mobile-image {
+    display: flex;
+  }
